--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,11 @@
+Components
+** 
 * start
   :LOGBOOK:
+  CLOCK: [2023-09-24 Sun 19:37]--[2023-09-24 Sun 21:00] => 1:23
+  CLOCK: [2023-09-24 Sun 15:26]--[2023-09-24 Sun 16:43] => 1:17
+  CLOCK: [2023-09-24 Sun 12:27]--[2023-09-24 Sun 14:03] => 1:36
+  CLOCK: [2023-09-24 Sun 00:43]--[2023-09-24 Sun 01:22] => 0:39
+  CLOCK: [2023-09-23 Sat 23:17]--[2023-09-24 Sun 00:38] => 1:21
   CLOCK: [2023-09-20 Wed 14:43]--[2023-09-20 Wed 15:39] => 0:56
   :END:
